Add the ability to track Trams and output their locations to the console